--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="game-title">2048</div>
-        <button class="reload-button" onclick="reloadGame()">↻</button>
-        <div class="score-container">
-          <div>Score: <span class="score">0</span></div>
-          <div>Best: <span class="best">0</span></div>
-        </div>
-      </header>
+  <header>
+    <img src="2048.svg" alt="2048 Logo" class="game-logo"> 
+    <button class="reload-button" onclick="reloadGame()">↻</button>
+    <div class="score-container">
+      <div>Score: <span class="score">0</span></div>
+      <div>Best: <span class="best">0</span></div>
+    </div>
+  </header>
     
         <div id="game-board"></div>
     
