--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Cool 2048</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
   <header>
@@ -25,6 +26,15 @@
           <h2 style: margin-top: 10px>Game Over!</h2>
           <!-- <p>No more moves left!</p> -->
           <button class="button-81" onclick="reloadGame()">Try Again</button>
+        </div>
+      </div>
+
+      <div id="win-modal" class="overlay"> 
+        <div id="win-message">
+          <h2>You Win!</h2>
+          <p>You've reached 2048!</p>
+          <button class="button-81" onclick="continuePlaying()">Keep Playing</button>
+          <button class="button-81" onclick="endGame()">End Game</button>
         </div>
       </div>
 
