multi screen commit

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header>
     <img src="2048.svg" alt="2048 Logo" class="game-logo"> 
-    <button class="reload-button" onclick="reloadGame()">↻</button>
     <div class="score-container">
+      <button class="reload-button" onclick="reloadGame()"><img src="reload.svg" alt="reload"></button>
       <div>Score: <span class="score">0</span></div>
       <div>Best: <span class="best">0</span></div>
     </div>
